infrastructure/configs/observability/victoriametrics/vmagent-cnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-vmagent-to-db
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vmsingle # target metrics-db
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "8429"
              protocol: TCP
      # Cilium mTLS implementation
      authentication:
        mode: "required"
